# census-income-classifier

./: .gitignore  README.md  main.py  pyproject.toml  segment.py  shap_importance.py  train.py
artifacts/: best_params.json  decision_tree_rules.txt  feature_importances.csv  shap_importances.csv
report/: report.tex
